Update: Fix z-index.

--- a/views/style/categories.css
+++ b/views/style/categories.css
@@ -65,5 +65,4 @@ h3 {
 	line-height: 28px;
 	text-align: center;
 	text-shadow: -2px 2px 4px #000;
-	z-index: 100;
 }
